<resources>
    <string name="app_name">EcoMate</string>
    <string name="dashboard">Dashboard</string>
    <string name="welcome">Welcome, </string>
    <string name="username">username</string>
    <string name="location">Location</string>
    <string name="air_quality_index">Air Quality Index</string>
    <string name="index_number">25</string>
    <string name="index_header">Air is</string>
    <string name="index_quality">GOOD</string>
    <string name="challenge_today">Challenge Today:</string>
    <string name="Result_predict">Result:</string>
    <string name="challenge_name">Challenge name</string>
    <string name="challenge_desc">desc</string>
    <string name="profile">Profile</string>
    <string name="points">Points</string>
    <string name="total_point">00</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id">342912276982-ipfbc0p4nuud24mh5m08vrke64qi5h8s.apps.googleusercontent.com</string>
    <string name="reward">Reward</string>
    <string name="challenge">Challenge</string>
    <string name="termcondition"><![CDATA[Term & Condition]]></string>
    <string name="trashHub_title">TrashHub</string>
    <string name="Article_title">Article</string>
    <string name="trashHub_desc">Find the closest waste processing facility in your vicinity.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="trashHub">Search here...</string>
    <string name="trashHubLocation">Location</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="logoutMessage">You will be logged out. You must log in to access EcoMate.</string>
    <string name="logoutTitle">You will be logged out!</string>
    <string name="cancel">cancel</string>
    <string name="resultPredict">loading prediction…</string>
    <string name="article_content">Article Content</string>
    <string name="title_article">Title Article</string>
    <string name="retry">retry</string>
    <string name="article_recommendations">Article recommendations:</string>
    <string name="loading_image">loading image…</string>
    <string name="ok">OK</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="not_started">Not Started</string>
    <string name="challenge_point">Challenge point:</string>

</resources>