<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/appbar">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_arrow_left"/>

        <TextView
            android:id="@+id/page_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button"
            android:layout_marginStart="15dp"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/layout_appbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:src="@drawable/ic_baseline_profile"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/img_photo"
        app:layout_constraintStart_toStartOf="@id/img_photo"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"/>

    <TextView
        android:id="@+id/tv_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/img_photo"
        app:layout_constraintTop_toTopOf="@id/img_photo"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/points"
        android:textColor="@color/greenEco"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"/>

    <TextView
        android:id="@+id/tv_total_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/tv_point"
        app:layout_constraintTop_toTopOf="@id/tv_point"
        android:text="@string/total_point"
        android:textColor="@color/greenEco"
        android:textSize="64sp"
        android:fontFamily="@font/poppins_bold"/>
    
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="225dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/logout"
        android:background="@drawable/button_rounded"/>
</androidx.constraintlayout.widget.ConstraintLayout>