<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textWelcome_dasboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/dashboard"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/welcomeTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textWelcome_dasboard">

                <TextView
                    android:id="@+id/textwelcome_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/welcome"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"/>
                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/username"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_airQuality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" >
                <ImageView
                    android:id="@+id/img_AirQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/good"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="60dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTxt">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_location_pin_24" />

                    <TextView
                        android:id="@+id/location_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:fontFamily="@font/poppins_bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/air_quality_index"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_regular"/>

                    <TextView
                        android:id="@+id/tv_numberAirQuality"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:text="@string/index_number"
                        android:textColor="@color/white"
                        android:textSize="80sp"
                        android:fontFamily="@font/poppins_regular"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/index_header"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppins_regular"/>

                <TextView
                    android:id="@+id/tv_KondisiUdara"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/index_quality"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:fontFamily="@font/poppins_bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewChallenge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/challenge_today"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_airQuality" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_Challenge"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="20dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/greenEco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewChallenge">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_challengeName"
                        android:layout_width="wrap_content"
                        android:layout_height="28dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/challenge_name"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_bold"/>

                    <TextView
                        android:id="@+id/tv_challengeDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginStart="30dp"
                        android:text="@string/challenge_desc"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/poppins_regular"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tv_challengePointText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="30dp"
                            android:text="@string/challenge_point"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_regular"/>

                        <TextView
                            android:id="@+id/tv_challengePoint"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_regular"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewTrashHub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/trashHub_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_Challenge" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_TrashHub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTrashHub">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/trashub_img"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/trashHub_desc"
                        android:gravity="center"
                        android:textColor="@color/greenEco"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/Article_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_TrashHub" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_Article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewArticle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_article_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_article"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_bold" />

                    <TextView
                        android:id="@+id/tv_article_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/article_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:maxLines="3"
                        android:fontFamily="@font/poppins_regular" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
